mobile page add

--- a/embold-blue.com/company-news.html
+++ b/embold-blue.com/company-news.html
@@ -33,7 +33,7 @@
     <div class="row">
       <div class="col-12">
         <!-- <h4>Resources</h4> -->
-        <h1 class="header-sub-title">
+        <h1 class="header-sub-title header-sub-title-simple">
            News
         </h1>
       </div>
@@ -345,6 +345,42 @@
           <a href="company-team.html" class="nav-menu-link">Team</a>
           <a href="company-careers.html" class="nav-menu-link">Careers</a>
           <a href="company-news.html" class="nav-menu-link">News</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-light block-footer-mobile">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="images/logo-embold.svg" width="90" />
+        </div>
+        <div class="col-12">
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Product</h4>
+            <a href="#" class="nav-menu-link">About Gamma</a>
+            <a href="#" class="nav-menu-link">Use Cases</a>
+            <a href="#" class="nav-menu-link">Pricing</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Solutions</h4>
+            <a href="#" class="nav-menu-link">By User Role</a>
+            <a href="#" class="nav-menu-link">By Team Size</a>
+            <a href="#" class="nav-menu-link">By Industry</a>
+            <a href="#" class="nav-menu-link">Solution Approach</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Resources</h4>
+            <a href="#" class="nav-menu-link">Product</a>
+            <a href="#" class="nav-menu-link">Download</a>
+          </div>
+          <div class="wrap-menu">
+            <h4 class="footer-header-links">Company</h4>
+            <a href="#" class="nav-menu-link">About</a>
+            <a href="#" class="nav-menu-link">Team</a>
+            <a href="#" class="nav-menu-link">Careers</a>
+            <a href="#" class="nav-menu-link">News</a>
+          </div>
         </div>
       </div>
     </div>
