--- a/embold-blue.com/product-overview.html
+++ b/embold-blue.com/product-overview.html
@@ -41,7 +41,7 @@
   <a name="bug-prediction"></a>
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-6">
+      <div class="col-6 media-query-pc-only">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">Simple, Powerful, Friendly</h2>
         <p class="description">Designed to be beautiful. We put a lot of heart into making the developer and user experience as simple, clean and powerful as humanly possible. It works for and impresses everyone from the developer to the busy CTO.
@@ -64,6 +64,26 @@
       <div class="col-5">
         <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
       </div>
+      <div class="col-6 media-query-mobile-only">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Simple, Powerful, Friendly</h2>
+        <p class="description">Designed to be beautiful. We put a lot of heart into making the developer and user experience as simple, clean and powerful as humanly possible. It works for and impresses everyone from the developer to the busy CTO.
+          <ul>
+            <li>
+              Powerful Visualizations
+            </li>
+            <li>
+              The simple way to interact with your code
+            </li>
+            <li>
+              Made to be understood by managers
+            </li>
+            <li>
+              The last static analysis tool you will ever use
+            </li>
+          </ul>
+        </p>
+      </div>
     </div>
   </section>
   <section class="container block block-section-sub block-section-right">
@@ -84,7 +104,7 @@
 
   <section class="container block block-section-sub block-section-left">
     <div class="row">
-      <div class="col-6">
+      <div class="col-6 media-query-pc-only">
         <!-- <h4>Language Support</h4> -->
         <h2 class="section-title">A.I. inside - More than analytics</h2>
         <p class="description">embold is designed to be the most beautiful and user-friendly platform of its kind. By using powerful visualizations, design and A.I. to augment the development and code review process for everyone, we make static analysis accessible to all stakeholders. From the developer to the busy CTO.
@@ -106,6 +126,26 @@
       </div>
       <div class="col-5">
         <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6 media-query-mobile-only">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">A.I. inside - More than analytics</h2>
+        <p class="description">embold is designed to be the most beautiful and user-friendly platform of its kind. By using powerful visualizations, design and A.I. to augment the development and code review process for everyone, we make static analysis accessible to all stakeholders. From the developer to the busy CTO.
+          <ul>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+          </ul>
+        </p>
       </div>
     </div>
   </section>
