--- a/embold-blue.com/solutions-user-roles.html
+++ b/embold-blue.com/solutions-user-roles.html
@@ -85,6 +85,7 @@
     </div>
   </div>
   <script>
+  if (document.body.clientWidth < 814) {
     $("ul.tab-wrap").on("click", ".init", function() {
       $(this).closest("ul").children('li:not(.init)').toggle();
     });
@@ -96,6 +97,7 @@
       $("ul").children('.init').html($(this).html());
       allOptions.toggle();
     });
+  }
   </script>
 
   <section class="block block-sub-user-stories">
