update Solutions > User Roles

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -189,8 +189,8 @@
           </div>
         </div>
         <div class="col-4">
-          <div class="wrap-user photo-manager-1">
-            <h3 class="role">Dev-Ops</h3>
+          <div class="wrap-user photo-product-manager-1">
+            <h3 class="role">Manager</h3>
             <p class="description">
               I'm Java Developer in Valeo
             </p>
@@ -198,8 +198,8 @@
           </div>
         </div>
         <div class="col-4">
-          <div class="wrap-user photo-dev-ops-1">
-            <h3 class="role">Project Manager</h3>
+          <div class="wrap-user photo-architect-1">
+            <h3 class="role">Architect</h3>
             <p class="description">
               I'm Lead Project Manager in Toyota, Japan
             </p>
