--- a/embold-blue.com/solutions-industry.html
+++ b/embold-blue.com/solutions-industry.html
@@ -236,7 +236,7 @@
                 <h3>
                   Embedded software engineering
                 </h3>
-                <div class="paragraph">
+                <div class="paragraph-use-cases">
                   <p>
                     Automative companies use Embold to improve the KPIs important for embedded software engineering. We embrace KPIs like reliability, usability, efficiency, changeability, portability and many more. Embold enables companies to slice and dice the data needed specific for projects and to facilitate the production of variances.
                   </p>
@@ -258,7 +258,7 @@
                 <h3>
                   Supplier Management
                 </h3>
-                <div class="paragraph">
+                <div class="paragraph-use-cases">
                   <p>
                     Embold enables you to give a quality score and trend to vendors and their teams. By adding a price tag, you can see where you can get the best quality value.
                   </p>
@@ -272,7 +272,7 @@
                 <h3>
                   Quality improvement
                 </h3>
-                <div class="paragraph">
+                <div class="paragraph-use-cases">
                   <p>
                     As a first to improve the quality of your project the hotspots are identified. Embold takes the developer activities as well as the tickets that effected certain components into account to create a risk metric. The Risk metric combined with a high number of code and design issues and bad metrics marks a certain component as hotspots in Embold.
                   </p>
