--- a/embold-blue.com/solutions-user-roles-architects.html
+++ b/embold-blue.com/solutions-user-roles-architects.html
@@ -33,16 +33,13 @@
     <div class="container">
       <div class="row">
         <div class="col-3">
-          Developers
+          Architects
         </div>
         <div class="col-9">
           <ul class="sub-menu-alt">
             <li id="summary">Summary / Customer Stories</li>
             <li id="useCases">Use Cases</li>
             <li id="contactSales">Contact Sales</li>
-          </ul>
-          <ul class="sub-menu-alt">
-            <li>DOWNLOAD</li>
           </ul>
         </div>
       </div>
@@ -73,7 +70,7 @@
               <img src="images/ic-sm-user-developer.svg" width="24" /> Developers
             </li>
             <li class="tab-item active" onclick="window.location.href='./solutions-user-roles-architects.html'">
-              <img src="images/ic-sm-user-architect.svg" width="24" /> Architects
+              <img src="images/ic-sm-user-architect-wh.svg" width="24" /> Architects
             </li>
             <li class="tab-item" onclick="window.location.href='./solutions-user-roles-pm.html'">
               <img src="images/ic-sm-user-pm.svg" width="24" />Product Managers
