--- a/embold-blue.com/solutions-user-roles.html
+++ b/embold-blue.com/solutions-user-roles.html
@@ -33,16 +33,13 @@
     <div class="container">
       <div class="row">
         <div class="col-3">
-          Developers
+          Executives
         </div>
         <div class="col-9">
           <ul class="sub-menu-alt">
             <li id="summary">Summary / Customer Stories</li>
             <li id="useCases">Use Cases</li>
             <li id="contactSales">Contact Sales</li>
-          </ul>
-          <ul class="sub-menu-alt">
-            <li>DOWNLOAD</li>
           </ul>
         </div>
       </div>
@@ -67,7 +64,7 @@
           </div>
           <ul class="tab-wrap">
             <li class="tab-item init active" onclick="window.location.href='./solutions-user-roles.html'">
-              <img src="images/ic-sm-user-executive.svg" width="24" /> Executive
+              <img src="images/ic-sm-user-executive-wh.svg" width="24" /> Executive
             </li>
             <li class="tab-item" onclick="window.location.href='./solutions-user-roles-developers.html'">
               <img src="images/ic-sm-user-developer.svg" width="24" /> Developers
@@ -248,9 +245,11 @@
                   <p>
                     Embold has its roots in assessing code quality for big corporations. By this the Embold score gives managers a fast overview of repository they have or want to add to their portfolio.
                   </p>
+                  <img src="images/use-case-embold-rating-panel.png" width="100%" height="auto" />
                   <p>
                     This gives a fast awareness about the overall health of projects, or for rewrite-or-reuse decisions.
                   </p>
+                  <img src="images/embedded-software-engineering-table.png" width="100%" height="auto" />
                   <p>
                     Being able to drill down, which KPIs will get impacted. With Embold you can keep your house clean of unhealthy code or to calculate efforts / assets more accurate on the fly.
                   </p>
